--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,30 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4.32"
-    ext.hilt_version = '2.37'
+    ext.kotlin_version = '1.6.0'
+    ext.kotlin_coroutines = '1.3.7'
+    ext.lifecycle_version = '2.4.0'
+    ext.retrofit_version = '2.9.0'
+    ext.gson_version = '2.8.8'
+    ext.hilt_version = '2.40.2'
+    ext.room_version = '2.3.0'
+    ext.nav_version = '2.3.5'
+    ext.glide_palette_version = '2.1.2'
+    ext.glide_version = '4.12.0'
+    ext.timber_version = '4.7.1'
+
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.1"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.20"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+        classpath "com.android.tools.build:gradle:7.0.3"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.0"
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
-
-
 
 task clean(type: Delete) {
     delete rootProject.buildDir
